prevented buttons from automatically spacing

--- a/codeup-design.css
+++ b/codeup-design.css
@@ -193,6 +193,7 @@ img:not(.nav-image) {
         margin-right: 140px;
     }
     .btn-container {
+        max-width: 920px;
         position: relative;
         padding-left: 120px;
         padding-right: 130px;
